# security_app_v2

./: .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  docker-compose.openvas.yml  docker-compose.override.yml  docker-compose.yml  execute-order-66.ps1
installer/: build-installer.ps1  setup-server-agent.ps1  watchtower-setup.iss
public/: order66.js
src/: api.rs  db.rs  lib.rs  main.rs  models.rs
src/frontend/: app.rs
src/frontend/components/: mod.rs  scan_status_bar.rs  severity_badge.rs  sidebar.rs  stat_card.rs  toast.rs
src/frontend/pages/: dashboard.rs  mod.rs  reports.rs  results.rs  scan.rs  scans.rs  settings.rs  tools.rs
src/scanners/: bandit.rs  dependency_check.rs  mod.rs  nikto.rs  nmap.rs  openvas.rs  runner.rs  sonarqube.rs  sqlmap.rs  trivy.rs  zap.rs
src/services/: azure_devops.rs  email.rs  mod.rs  report.rs
style/: main.css
