[package]
name = "watchtower"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "watchtower"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.6", features = [] }
leptos_meta = "0.6"
leptos_router = "0.6"
leptos_actix = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cfg-if = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# Client-only
gloo-net = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "console", "HtmlAudioElement", "HtmlInputElement", "EventTarget",
] }

# Server-only
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"], optional = true }
dotenvy = { version = "0.15", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-actix-web = { version = "0.7", optional = true }
walkdir = { version = "2", optional = true }
quick-xml = { version = "0.36", features = ["serialize"], optional = true }
ammonia = { version = "4", optional = true }
regex = { version = "1", optional = true }
once_cell = { version = "1", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:wasm-bindgen-futures",
    "dep:log",
    "dep:web-sys",
]
ssr = [
    "dep:leptos_actix",
    "dep:actix-web",
    "dep:actix-files",
    "dep:sqlx",
    "dep:tokio",
    "dep:reqwest",
    "dep:lettre",
    "dep:dotenvy",
    "dep:uuid",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-actix-web",
    "dep:walkdir",
    "dep:quick-xml",
    "dep:ammonia",
    "dep:regex",
    "dep:once_cell",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "watchtower"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:67"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
